Version 2 (Implementacion Metodo PAS)